libs/preprocessor/tests/errors/pe6_change_builtin/stderr.ansi
[0m[1m[38;5;9merror[PE6][0m[1m: tried changing a built-in macro[0m
  [0m[34m┌─[0m source.hpp:1:9
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m #define [0m[31m__ARMA__[0m 0
  [0m[34m│[0m         [0m[31m^^^^^^^^[0m [0m[31mbuilt-in macro `__ARMA__`[0m
  [0m[34m│[0m
  [0m[34m=[0m [36mnote[0m: built-in macros cannot be changed

